[package]
name = "network_types"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_cbor = "0.10.1"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite_"]

[dependencies.coretypes]
path = "../coretypes"

[dependencies.rusqlite]
version          = "0.20.0"
default_features = false
features         = ["bundled"]
