[package]
name = "network_types"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite"]

[dependencies.kson]
path = "../../kson"

[dependencies.coretypes]
path = "../coretypes"

[dependencies.herald_attachments]
path = "../herald_attachments"

[dependencies.herald_ids]
path = "../herald_ids"

# [dependencies.rusqlite]
# version          = "0.21"
# default_features = false
