[package]
name    = "heraldcore"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainmail     = { git = "https://github.com/kalix-systems/chainmail" }
chrono        = { version = "0.4.7", default_features  = false}
dashmap       = "1.0"
herald_common = { path    = "../../common", features = ["rusqlite_"] }
image         = { version = "0.22.1", default_features = false, features = ["jpeg", "png_codec"]}
lazy_pond     = { path    = "../../lazy_pond" }
lazy_static   = "1.3.0"
regex         = "1.2.1"
rusqlite      = { version = "0.20.0", default_features = false, features = ["functions"]}
serde         = "1.0.99"
serde_cbor    = "0.10.1"
sodiumoxide   = "0.2"
tokio         = "0.2.0-alpha.5"

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
